--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,5 +1,5 @@
 #navbar {
-    position: fixed; 
+    position: fixed;
     top: 0;
     width: 100%;
     display: flex;
@@ -79,14 +79,6 @@ form span {
     display: flex;
 }
 
-.profile-content {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    padding: 10px;
-    z-index: 1;
-}
 
 .form-search {
     display: flex;
@@ -98,4 +90,70 @@ form span {
     display: flex;
     align-items: center;
     gap: 5px;
+}
+
+.profile-content {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  
+    z-index: 1;
+    margin-top: 28px;
+    right:0 ;
+
+
+    width: 200px;
+}
+
+.profile-content li {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    color: #212529;
+    gap: 8px;
+    border-top: 1px solid #EEF2FA;
+    /* border-bottom: 1px solid #EEF2FA; */
+    padding: 5px;
+  
+
+}
+
+.profile-content ul{
+    gap:0px
+}
+
+
+.profile-content li a {
+    font-size: 14px;
+    color: #444444;
+
+}
+
+.profile-content hr {
+    width: 100%;
+}
+
+.dropdown-header h6 {
+
+    color: #444444;
+    font-size: 16px;
+    font-weight: normal;
+
+}
+
+.dropdown-header p {
+
+    color: #444444;
+}
+
+.dropdown-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+
+
 }
