--- a/src/components/forms/Project/projectform.css
+++ b/src/components/forms/Project/projectform.css
@@ -1,34 +1,53 @@
 .project-form {
-     display: flex;
-     flex-direction: column;
-     gap: 6px;
- }
- 
- .project-form input {
-     outline: unset;
- }
- 
- .project-form .button {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     width: 100%;
- }
- 
- .project-form div button {
-     border: 2px solid #6358DC;
-     border-radius: 8px;
-     padding: 10px;
-     font-size: 15px;
-     font-family: "Open Sans", sans-serif;
-     font-weight: 500;
-     color: #6358DC;
-     background-color: transparent;
- }
- 
- .project-form button:hover {
-     cursor: pointer;
-     background-color: #6358DC;
-     color: #fff;
-     transition: .5s;
- }
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
+.project-form input {
+    outline: unset;
+}
+
+.project-form .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.project-form div button {
+    border: 2px solid #6358DC;
+    border-radius: 8px;
+    padding: 10px;
+    font-size: 15px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+    color: #6358DC;
+    background-color: transparent;
+}
+
+.project-form button:hover {
+    cursor: pointer;
+    background-color: #6358DC;
+    color: #fff;
+    transition: .5s;
+}
+
+.flex7 {
+
+    display: flex;
+    gap: 20px;
+}
+#h3{
+    margin-bottom: 25px;
+}
+
+.textarea{
+   min-width: 650px;
+  min-height:80px;
+}
+
+#textare {
+    width: 100%;
+
+}
